--- a/article/templates/article/index.html
+++ b/article/templates/article/index.html
@@ -31,7 +31,7 @@
 
 <body>
   <div class="header">
-    <div class="brand">UVEY</div>
+    <div class="brand"><img src="{% static 'article/info/brand.png'%}" style="height: 80px; width: 240px;"></div>
   </div>
 
 
@@ -39,7 +39,7 @@
     <div class="contents">
       <div class="topRecommendedArticles">
         <div class="topArticleImg">
-          <img class="articleImg" src="{%static 'article/img/sample.jpg' %}" style="height: 360px; width: 640px;">
+          <img class="articleImg" src="{%static 'article/img/sample.jpg' %}" style="height: 360px; width: 540px;">
         </div>
         <div class="topArticleTitle">
           ZARAの最新アイテム特集♡着るだけで美人に見える旬のアースZARAの最新アイテム特集♡着るだけで美人に見える旬のアース
@@ -95,11 +95,63 @@
       
         <div class="communicationSpace">
           <div class="communicationTitle">質問を投稿する</div>
-          <div class="communicationList"></div>
-          <div class="communicationList"></div>
-          <div class="communicationList"></div>
-          <div class="communicationList"></div>
-          <div class="communicationList"></div>
+          <div class="communicationList">
+            <div class="communicatorName">
+              <img src="{% static 'article/img/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
+              質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
+            </div>
+            <div class="communication">
+              ARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアース
+            </div>
+            <div class="communications-answer">
+              <a class="communications-answer-materials" href="">続きをみる</a>
+              <a class="communications-answer-materials" href="">回答する</a>
+            </div>
+            <div class="communicatorName">
+              <img src="{% static 'article/img/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
+              質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
+            </div>
+            <div class="communication">
+              ARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアース
+            </div>
+            <div class="communications-answer">
+              <a class="communications-answer-materials" href="">続きをみる</a>
+              <a class="communications-answer-materials" href="">回答する</a>
+            </div>
+            <div class="communicatorName">
+              <img src="{% static 'article/img/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
+              質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
+            </div>
+            <div class="communication">
+              ARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアース
+            </div>
+            <div class="communications-answer">
+              <a class="communications-answer-materials" href="">続きをみる</a>
+              <a class="communications-answer-materials" href="">回答する</a>
+            </div>
+            <div class="communicatorName">
+              <img src="{% static 'article/img/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
+              質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
+            </div>
+            <div class="communication">
+              ARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアース
+            </div>
+            <div class="communications-answer">
+              <a class="communications-answer-materials" href="">続きをみる</a>
+              <a class="communications-answer-materials" href="">回答する</a>
+            </div>
+            <div class="communicatorName">
+              <img src="{% static 'article/img/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
+              質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
+            </div>
+            <div class="communication">
+              ARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアース
+            </div>
+            <div class="communications-answer">
+              <a class="communications-answer-materials" href="">続きをみる</a>
+              <a class="communications-answer-materials" href="">回答する</a>
+            </div>
+          </div>
         </div>      
 
       </div>
@@ -241,12 +293,15 @@
     </div>
 
   <div class="footer">
-    <div class="footerMenu">
-
+      <div class="footerMenu">
+        <div class="footerMenuMaterial"><a href="">メディアポリシー</a></div>
+        <div class="footerMenuMaterial"><a href="">プライバシーポリシー</a></div>
+        <div class="footerMenuMaterial"><a href="">お問合せ</a></div>
+      </div>
+      <div class="brand-fotter"><img src="{% static 'article/info/brand.png'%}" style="height: 40px; width: 120px;"></div>
     </div>
-    <div class="copyright">Copyright© UVEY, Inc. All Rights Reserved.</div>
-  </div>
-  </div>
+  <div class="copyright">Copyright© Uvey, Inc. All Rights Reserved.</div>
+</div>
 
 </body>
 
