--- a/article/static/article/css/index.css
+++ b/article/static/article/css/index.css
@@ -195,6 +195,7 @@ a{
 	display: block;
 	border-top: 1px double grey;
 	padding-top: 40px;
+	margin-top: 40px;
 }
 .footerSpace{
 	border: 1px solid black;
