--- a/article/templates/article/index.html
+++ b/article/templates/article/index.html
@@ -3,10 +3,8 @@
 <html lang="ja">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,user-scalable=yes">
-  <title>UVEY[ユービー]｜職場の悩みを解決</title>
+  {% include 'article/module/head.html' %}
+  <title>UVEY[ユービイ]｜職場の悩みを解決</title>
   <meta name="description" content="職場で悩みを抱えてませんか？聞いて話してお悩みを解消！">
   <link rel="canonical" href="">
   <!-- SNS -->
@@ -20,84 +18,48 @@
   <meta property="og:site_name" content="サイト名">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="appIDを入力">
-  <!-- ICON -->
-  <link rel="apple-touch-icon-precomposed" href="">
-  <link rel="icon" href="" sizes="16x16" type="image/png">
-  <!-- STATIC FILE -->
-	<link rel="stylesheet" type='text/css' href="{% static 'article/css/index.css' %}">
   <!-- indexしない -->
   <meta name="robots" content="noindex,nofollow">
 </head>
 
 <body>
-  <div class="header">
-    <div class="brand"><img src="{% static 'article/info/brand.png'%}" style="height: 80px; width: 240px;"></div>
-  </div>
-
+  {% include 'article/module/header.html' %}
 
   <div class="wrapper">
     <div class="contents">
       <div class="topRecommendedArticles">
-        <div class="topArticleImg">
-          <img class="articleImg" src="{%static 'article/img/sample.jpg' %}" style="height: 360px; width: 540px;">
-        </div>
-        <div class="topArticleTitle">
-          ZARAの最新アイテム特集♡着るだけで美人に見える旬のアースZARAの最新アイテム特集♡着るだけで美人に見える旬のアース
-        </div>
+        <a href="{% url 'article:detail' first.pk %}">
+          <div class="topArticleImg">
+            <img class="articleImg" src="{{ first.thumbnail.url }}" style="height: 360px; width: 540px;">
+          </div>
+          <div class="topArticleTitle">
+            {{ first.title }}
+          </div>
+        </a>
         <div class="artilceTagSpace">
           <p class="articleTag">職場</p>
         </div>
 
+        {% for object in list %}
         <div class="articleList">
+          <a href="{% url 'article:detail' object.pk %}">
           <div class="articleListImg">
-            <img class="articleImg" src="{%static 'article/img/sample.jpg' %}" style="height: 200px; width: 300px;">
+            <img class="articleImg" src="{{ object.thumbnail.url }}" style="height: 200px; width: 300px;">
           </div>
           <div class="articleListTitle">
-            ZARAの最新アイテム特集♡着るだけで美人に見える旬のアース
-         </div>
+            {{ object.title }}
+         </div></a>
           <div class="artilceListTagSpace">
             <p class="articleTag">職場</p>
           </div>
         </div>
-        <div class="articleList">
-          <div class="articleListImg">
-            <img class="articleImg" src="{%static 'article/img/sample.jpg' %}" style="height: 200px; width: 300px;">
-          </div>
-          <div class="articleListTitle">
-            ZARAの最新アイテム特集♡着るだけで美人に見える旬のアース
-          </div>
-          <div class="artilceListTagSpace">
-            <p class="articleTag">職場</p>
-          </div>
-        </div>
-        <div class="articleList">
-          <div class="articleListImg">
-            <img class="articleImg" src="{%static 'article/img/sample.jpg' %}" style="height: 200px; width: 300px;">
-          </div>
-          <div class="articleListTitle">
-            ZARAの最新アイテム特集♡着るだけで美人に見える旬のアース
-          </div>
-          <div class="artilceListTagSpace">
-            <p class="articleTag">職場</p>
-          </div>
-        </div>
-        <div class="articleList">
-          <div class="articleListImg">
-            <img class="articleImg" src="{%static 'article/img/sample.jpg' %}" style="height: 200px; width: 300px;">
-          </div>
-          <div class="articleListTitle">
-            ZARAの最新アイテム特集♡着るだけで美人に見える旬のアース
-          </div>
-          <div class="artilceListTagSpace">
-            <p class="articleTag">職場</p>
-          </div>
-        </div>
-      
+        {% endfor %}
+
         <div class="communicationSpace">
-          <div class="communicationTitle">質問を投稿する</div>
+          <div class="communicationTitle">質問を投稿する{{trend_word1}}</div>
           <div class="communicationList">
             <div class="communicatorName">
-              <img src="{% static 'article/img/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
+              <img src="{% static 'article/info/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
               質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
             </div>
             <div class="communication">
@@ -108,7 +70,7 @@
               <a class="communications-answer-materials" href="">回答する</a>
             </div>
             <div class="communicatorName">
-              <img src="{% static 'article/img/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
+              <img src="{% static 'article/info/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
               質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
             </div>
             <div class="communication">
@@ -119,7 +81,7 @@
               <a class="communications-answer-materials" href="">回答する</a>
             </div>
             <div class="communicatorName">
-              <img src="{% static 'article/img/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
+              <img src="{% static 'article/info/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
               質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
             </div>
             <div class="communication">
@@ -130,7 +92,7 @@
               <a class="communications-answer-materials" href="">回答する</a>
             </div>
             <div class="communicatorName">
-              <img src="{% static 'article/img/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
+              <img src="{% static 'article/info/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
               質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
             </div>
             <div class="communication">
@@ -141,7 +103,7 @@
               <a class="communications-answer-materials" href="">回答する</a>
             </div>
             <div class="communicatorName">
-              <img src="{% static 'article/img/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
+              <img src="{% static 'article/info/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
               質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
             </div>
             <div class="communication">
@@ -156,151 +118,8 @@
 
       </div>
     </div>
-
-    <div class="sideBar">
-      <div class="adSpace-F">
-        <a href="https://www.vultr.com/?ref=8604609"><img src="https://www.vultr.com/media/banners/banner_300x250.png"
-            width="300" height="250"></a>
-      </div>
-
-      <div class="category">
-        <div class="categoryListTitle">テーマ一覧</div>
-        <div class="categoryList">
-          <img src="{% static 'article/img/Caesar.jpeg' %}"style="height: 20px; width: 20px; margin-right: 15px;">
-          ファッション
-        </div>
-        <div class="categoryList">
-          <img src="{% static 'article/img/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-          ファッション
-        </div>
-        <div class="categoryList">
-          <img src="{% static 'article/img/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-          ファッション
-        </div>
-        <div class="categoryList">
-          <img src="{% static 'article/img/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-          ファッション
-        </div>
-        <div class="categoryList">
-          <img src="{% static 'article/img/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-          ファッション
-        </div>
-        <div class="categoryList">
-          <img src="{% static 'article/img/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-          ファッション
-        </div>
-        <div class="categoryList">
-          <img src="{% static 'article/img/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-          ファッション
-        </div>
-        <div class="categoryList">
-          <img src="{% static 'article/img/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-          ファッション
-        </div>
-        <div class="categoryList">
-          <img src="{% static 'article/img/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-          ファッション
-        </div>
-        <div class="categoryList">
-          <img src="{% static 'article/img/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-          ファッション
-        </div>
-
-      </div>
-
-      <div class="adSpace-S">
-        <a href="https://www.vultr.com/?ref=8604609"><img src="https://www.vultr.com/media/banners/banner_300x250.png"
-            width="300" height="250"></a>
-      </div>
-
-      <div class="trendSpace">
-        <div class="trendListTitle">トレンドワード</div>
-        <div class="trendList">#aa</div>
-        <div class="trendList">#複</div>
-        <div class="trendList">#仕事</div>
-        <div class="trendList">#結婚</div>
-        <div class="trendList">#恋愛</div>
-        <div class="trendList">#上司</div>
-        <div class="trendList">#ファッション</div>
-        <div class="trendList">#転職活動</div>
-      </div>
-      
-      <div class="rankingSpace">
-        <div class="rankingTitle">人気記事ランキング</div>
-        
-        <div class="rankingArticle">
-          <div class="rankingArticleImg">
-            <img class="articleImg" src="{%static 'article/img/sample.jpg' %}" style="height: 80px; width: 120px;">
-          </div>
-          <div class="rankingArticleContent">
-            ARAの最新アイテム特集♡着るだけで美人に見える旬のアース
-            <div class="artilceListTagSpace-ranking">
-              <p class="articleTag-ranking">職場</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="rankingArticle">
-          <div class="rankingArticleImg">
-            <img class="articleImg" src="{%static 'article/img/sample.jpg' %}" style="height: 80px; width: 120px;">
-          </div>
-          <div class="rankingArticleContent">
-            ARAの最新アイテム特集♡着るだけで美人に見える旬のアース
-            <div class="artilceListTagSpace-ranking">
-              <p class="articleTag-ranking">職場</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="rankingArticle">
-          <div class="rankingArticleImg">
-            <img class="articleImg" src="{%static 'article/img/sample.jpg' %}" style="height: 80px; width: 120px;">
-          </div>
-          <div class="rankingArticleContent">
-            ARAの最新アイテム特集♡着るだけで美人に見える旬のアース
-            <div class="artilceListTagSpace-ranking">
-              <p class="articleTag-ranking">職場</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="rankingArticle">
-          <div class="rankingArticleImg">
-            <img class="articleImg" src="{%static 'article/img/sample.jpg' %}" style="height: 80px; width: 120px;">
-          </div>
-          <div class="rankingArticleContent">
-            ARAの最新アイテム特集♡着るだけで美人に見える旬のアース
-            <div class="artilceListTagSpace-ranking">
-              <p class="articleTag-ranking">職場</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="rankingArticle">
-          <div class="rankingArticleImg">
-            <img class="articleImg" src="{%static 'article/img/sample.jpg' %}" style="height: 80px; width: 120px;">
-          </div>
-          <div class="rankingArticleContent">
-            ARAの最新アイテム特集♡着るだけで美人に見える旬のアース
-            <div class="artilceListTagSpace-ranking">
-              <p class="articleTag-ranking">職場</p>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-    </div>
-
-  <div class="footer">
-      <div class="footerMenu">
-        <div class="footerMenuMaterial"><a href="">メディアポリシー</a></div>
-        <div class="footerMenuMaterial"><a href="">プライバシーポリシー</a></div>
-        <div class="footerMenuMaterial"><a href="">お問合せ</a></div>
-      </div>
-      <div class="brand-fotter"><img src="{% static 'article/info/brand.png'%}" style="height: 40px; width: 120px;"></div>
-    </div>
-  <div class="copyright">Copyright© Uvey, Inc. All Rights Reserved.</div>
+  {% include 'article/module/sidebar.html' %}
+  {% include 'article/module/footer.html' %}
 </div>
 
 </body>
