--- a/article/templates/article/module/head.html
+++ b/article/templates/article/module/head.html
@@ -8,3 +8,4 @@
 <link rel="icon" href="" sizes="16x16" type="image/png">
 <!-- BASE STATIC FILE -->
 <link rel="stylesheet" type='text/css' href="{% static 'article/css/index.css' %}">
+<link rel="stylesheet" type='text/css' href="{% static 'article/css/module/searchbox.css' %}">
