--- a/article/templates/article/index.html
+++ b/article/templates/article/index.html
@@ -59,13 +59,22 @@
           </div>
         </div>
         {% endfor %}
-        
+        <div class="seeMoreSpace">
+            <a href="{% url 'article:search_result' %}">
+          <div class="seeMoreButton">他の記覧を見る</div></a>
+        </div>
 
-        <div class="communicationSpace">
-          <div class="communicationTitle">質問を投稿する</div>
+        <div class="ad-TH">
+          <a href="https://www.vultr.com/?ref=8604609"><img src="https://www.vultr.com/media/banners/banner_468x60.png"
+            width="468" height="60"></a>
+          <a href="https://www.vultr.com/?ref=8604609"><img src="https://www.vultr.com/media/banners/banner_468x60.png"
+                width="468" height="60"></a>
+        </div>
+                <div class="communicationSpace">
+          <div class="communicationTitle">お悩みを投稿する</div>
           <div class="communicationList">
             <div class="communicatorName">
-              <img src="{% static 'article/info/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
+              <img src="{% static 'article/info/people.png'%}" style="height: 30px; width: 30px;">
               質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
             </div>
             <div class="communication">
@@ -76,7 +85,7 @@
               <a class="communications-answer-materials" href="">回答する</a>
             </div>
             <div class="communicatorName">
-              <img src="{% static 'article/info/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
+              <img src="{% static 'article/info/people.png'%}" style="height: 30px; width: 30px;">
               質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
             </div>
             <div class="communication">
@@ -87,7 +96,7 @@
               <a class="communications-answer-materials" href="">回答する</a>
             </div>
             <div class="communicatorName">
-              <img src="{% static 'article/info/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
+              <img src="{% static 'article/info/people.png'%}" style="height: 30px; width: 30px;">
               質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
             </div>
             <div class="communication">
@@ -98,7 +107,7 @@
               <a class="communications-answer-materials" href="">回答する</a>
             </div>
             <div class="communicatorName">
-              <img src="{% static 'article/info/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
+              <img src="{% static 'article/info/people.png'%}" style="height: 30px; width: 30px;">
               質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
             </div>
             <div class="communication">
@@ -109,7 +118,7 @@
               <a class="communications-answer-materials" href="">回答する</a>
             </div>
             <div class="communicatorName">
-              <img src="{% static 'article/info/salaryman.jpeg'%}" style="height: 30px; width: 30px;">
+              <img src="{% static 'article/info/people.png'%}" style="height: 30px; width: 30px;">
               質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
             </div>
             <div class="communication">
@@ -119,10 +128,15 @@
               <a class="communications-answer-materials" href="">続きをみる</a>
               <a class="communications-answer-materials" href="">回答する</a>
             </div>
+          <div class="seeMoreSpace">
+            <a href="{% url 'article:search_result' %}">
+              <div class="seeMoreButton">他のお悩みを見る</div>
+            </a>
+          </div>
+          </div>
+
           </div>
         </div>      
-
-      </div>
     </div>
   {% include 'article/module/sidebar.html' %}
   {% include 'article/module/footer.html' %}
