--- a/article/templates/article/module/sidebar.html
+++ b/article/templates/article/module/sidebar.html
@@ -19,46 +19,46 @@
     </div>
 
     <div class="category">
-        <div class="categoryListTitle">テーマ一覧</div>
+        <div class="categoryListTitle">人気のテーマ一覧</div>
         <div class="categoryList">
-            <img src="{% static 'article/info/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
+            <img src="{% static 'article/info/communication.png' %}" style="height: 20px; width: 20px; margin-right: 15px;">
+            人間関係
+        </div>
+        <div class="categoryList">
+            <img src="{% static 'article/info/human.png' %}" style="height: 20px; width: 20px; margin-right: 15px;">
+            転職・退職
+        </div>
+        <div class="categoryList">
+            <img src="{% static 'article/info/celebration.png' %}" style="height: 20px; width: 20px; margin-right: 15px;">
+            結婚
+        </div>
+        <div class="categoryList">
+            <img src="{% static 'article/info/private.png' %}" style="height: 20px; width: 20px; margin-right: 15px;">
+            ワークライフ
+        </div>
+        <div class="categoryList">
+            <img src="{% static 'article/info/harassment.png' %}" style="height: 20px; width: 20px; margin-right: 15px;">
+            ハラスメント
+        </div>
+        <div class="categoryList">
+            <img src="{% static 'article/info/love.png' %}" style="height: 20px; width: 20px; margin-right: 15px;">
+            恋愛
+        </div>
+        <div class="categoryList">
+            <img src="{% static 'article/info/work.png' %}" style="height: 20px; width: 20px; margin-right: 15px;">
+            スキル
+        </div>
+        <div class="categoryList">
+            <img src="{% static 'article/info/fashion.png' %}" style="height: 20px; width: 20px; margin-right: 15px;">
             ファッション
         </div>
         <div class="categoryList">
-            <img src="{% static 'article/info/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-            ファッション
+            <img src="{% static 'article/info/health.png' %}" style="height: 20px; width: 20px; margin-right: 15px;">
+            ヘルス
         </div>
         <div class="categoryList">
-            <img src="{% static 'article/info/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-            ファッション
-        </div>
-        <div class="categoryList">
-            <img src="{% static 'article/info/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-            ファッション
-        </div>
-        <div class="categoryList">
-            <img src="{% static 'article/info/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-            ファッション
-        </div>
-        <div class="categoryList">
-            <img src="{% static 'article/info/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-            ファッション
-        </div>
-        <div class="categoryList">
-            <img src="{% static 'article/info/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-            ファッション
-        </div>
-        <div class="categoryList">
-            <img src="{% static 'article/info/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-            ファッション
-        </div>
-        <div class="categoryList">
-            <img src="{% static 'article/info/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-            ファッション
-        </div>
-        <div class="categoryList">
-            <img src="{% static 'article/info/Caesar.jpeg' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-            ファッション
+            <img src="{% static 'article/info/career.png' %}" style="height: 20px; width: 20px; margin-right: 15px;">
+            キャリア
         </div>
 
     </div>
