--- a/article/templates/article/detail.html
+++ b/article/templates/article/detail.html
@@ -25,6 +25,9 @@
 </head>
 
 <body>
+  <div class="message">
+    <p>働く女性のための情報メディア</p>
+  </div>
   {% include 'article/module/header.html' %}
   <div class="wrapper">
     <div class="contents">
