--- a/article/templates/article/index.html
+++ b/article/templates/article/index.html
@@ -24,6 +24,9 @@
 </head>
 
 <body>
+  <div class="message">
+    <p>働く女性のための情報メディア</p>
+  </div>
   {% include 'article/module/header.html' %}
 
   <div class="wrapper">
@@ -61,7 +64,7 @@
         {% endfor %}
         <div class="seeMoreSpace">
             <a href="{% url 'article:search_result' %}">
-          <div class="seeMoreButton">他の記覧を見る</div></a>
+          <div class="seeMoreButton">他の記覧も見る</div></a>
         </div>
 
         <div class="ad-TH">
