--- a/article/templates/article/module/sidebar.html
+++ b/article/templates/article/module/sidebar.html
@@ -25,8 +25,8 @@
             人間関係
         </div>
         <div class="categoryList">
-            <img src="{% static 'article/info/human.png' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-            転職・退職
+            <img src="{% static 'article/info/money.png' %}" style="height: 20px; width: 20px; margin-right: 15px;">
+            お金
         </div>
         <div class="categoryList">
             <img src="{% static 'article/info/celebration.png' %}" style="height: 20px; width: 20px; margin-right: 15px;">
@@ -34,7 +34,7 @@
         </div>
         <div class="categoryList">
             <img src="{% static 'article/info/private.png' %}" style="height: 20px; width: 20px; margin-right: 15px;">
-            ワークライフ
+            プライベート
         </div>
         <div class="categoryList">
             <img src="{% static 'article/info/harassment.png' %}" style="height: 20px; width: 20px; margin-right: 15px;">
