--- a/article/templates/article/module/head.html
+++ b/article/templates/article/module/head.html
@@ -6,6 +6,8 @@
 <!-- ICON -->
 <link rel="apple-touch-icon-precomposed" href="">
 <link rel="icon" href="" sizes="16x16" type="image/png">
-<!-- BASE STATIC FILE -->
+<!-- BASE STATIC FILES -->
 <link rel="stylesheet" type='text/css' href="{% static 'article/css/index.css' %}">
 <link rel="stylesheet" type='text/css' href="{% static 'article/css/module/searchbox.css' %}">
+<!-- FONT -->
+<link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet">
