--- a/article/static/article/css/module/searchbox.css
+++ b/article/static/article/css/module/searchbox.css
@@ -21,11 +21,11 @@ box-shadow: 0 1px 1px rgba(0, 0, 0, .4) inset, 0 1px 0 rgba(255, 255, 255, .2);
 /* Form text input */
  
 .search-wrapper input {
-width: 180x;
+width: 193px;
 height: 20px;
 padding: 10px 5px;
 float: left;
-font: bold 15px 'lucida sans', 'trebuchet MS', 'Tahoma';
+font: 15px 'lucida sans', 'trebuchet MS', 'Tahoma';
 border: 0;
 background: #EEE;
 border-radius: 3px 0 0 3px;
