--- a/article/templates/article/search_result.html
+++ b/article/templates/article/search_result.html
@@ -39,12 +39,11 @@
           <p>「{{ query }}」の検索結果：{{ count }}件</p>
             {% if count != 0 %}
               <p>{{ pagecountstart }}件－{{ pagecountend }}件を表示</p>
-            {% else %}
-            <p>すべての記事：{{ count }}件</p>
             {% endif %}
           {% else %}
           <p>すべての記事：{{ count }}件</p>
           {% endif %}
+          {% include 'article/module/pagination.html' %}
         </div>
         {% for object in object_list %}
         <div class="articleList">
@@ -64,68 +63,7 @@
         </div>
         {% endfor %}
         {% include 'article/module/pagination.html' %}
-
-        <div class="communicationSpace">
-          <div class="communicationTitle">質問を投稿する</div>
-          <div class="communicationList">
-            <div class="communicatorName">
-              <img src="{% static 'article/info/people.png'%}" style="height: 30px; width: 30px;">
-              質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
-            </div>
-            <div class="communication">
-              ARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアース
-            </div>
-            <div class="communications-answer">
-              <a class="communications-answer-materials" href="">続きをみる</a>
-              <a class="communications-answer-materials" href="">回答する</a>
-            </div>
-            <div class="communicatorName">
-              <img src="{% static 'article/info/people.png'%}" style="height: 30px; width: 30px;">
-              質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
-            </div>
-            <div class="communication">
-              ARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアース
-            </div>
-            <div class="communications-answer">
-              <a class="communications-answer-materials" href="">続きをみる</a>
-              <a class="communications-answer-materials" href="">回答する</a>
-            </div>
-            <div class="communicatorName">
-              <img src="{% static 'article/info/people.png'%}" style="height: 30px; width: 30px;">
-              質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
-            </div>
-            <div class="communication">
-              ARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアース
-            </div>
-            <div class="communications-answer">
-              <a class="communications-answer-materials" href="">続きをみる</a>
-              <a class="communications-answer-materials" href="">回答する</a>
-            </div>
-            <div class="communicatorName">
-              <img src="{% static 'article/info/people.png'%}" style="height: 30px; width: 30px;">
-              質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
-            </div>
-            <div class="communication">
-              ARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアース
-            </div>
-            <div class="communications-answer">
-              <a class="communications-answer-materials" href="">続きをみる</a>
-              <a class="communications-answer-materials" href="">回答する</a>
-            </div>
-            <div class="communicatorName">
-              <img src="{% static 'article/info/people.png'%}" style="height: 30px; width: 30px;">
-              質問者：●●さん｜<span style="font-size: 12px; color:grey">現在の回答数：●●件</span>
-            </div>
-            <div class="communication">
-              ARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアースARAの最新アイテム特集♡着るだけで美人に見える旬のアース
-            </div>
-            <div class="communications-answer">
-              <a class="communications-answer-materials" href="">続きをみる</a>
-              <a class="communications-answer-materials" href="">回答する</a>
-            </div>
-          </div>
-        </div>
-
+        {% include 'article/posting/post.html' %}
       </div>
     </div>
     {% include 'article/module/sidebar.html' %}
